cmake_minimum_required(VERSION 3.26)
project(com_122)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab01-p01 "${PROJECT_SOURCE_DIR}/lab01/p01.cpp")
add_executable(lab01-p02 "${PROJECT_SOURCE_DIR}/lab01/p02.cpp")
add_executable(lab01-p03 "${PROJECT_SOURCE_DIR}/lab01/p03.cpp")
add_executable(lab01-p04 "${PROJECT_SOURCE_DIR}/lab01/p04.cpp")
add_executable(lab01-p05 "${PROJECT_SOURCE_DIR}/lab01/p05.cpp")
add_executable(lab01-p06 "${PROJECT_SOURCE_DIR}/lab01/p06.cpp")
add_executable(lab01-p07 "${PROJECT_SOURCE_DIR}/lab01/p07.cpp")
add_executable(lab01-p08 "${PROJECT_SOURCE_DIR}/lab01/p08.cpp")
add_executable(lab01-p09 "${PROJECT_SOURCE_DIR}/lab01/p09.cpp")
add_executable(lab01-p10 "${PROJECT_SOURCE_DIR}/lab01/p10.cpp")

add_executable(lab02-p01 "${PROJECT_SOURCE_DIR}/lab02/p01.cpp")
add_executable(lab02-p02 "${PROJECT_SOURCE_DIR}/lab02/p02.cpp")
add_executable(lab02-p03 "${PROJECT_SOURCE_DIR}/lab02/p03.cpp")
add_executable(lab02-p04 "${PROJECT_SOURCE_DIR}/lab02/p04.cpp")
add_executable(lab02-p05 "${PROJECT_SOURCE_DIR}/lab02/p05.cpp")
add_executable(lab02-p06 "${PROJECT_SOURCE_DIR}/lab02/p06.cpp")
add_executable(lab02-p07 "${PROJECT_SOURCE_DIR}/lab02/p07.cpp")
add_executable(lab02-p08 "${PROJECT_SOURCE_DIR}/lab02/p08.cpp")
add_executable(lab02-p09 "${PROJECT_SOURCE_DIR}/lab02/p09.cpp")
add_executable(lab02-p10 "${PROJECT_SOURCE_DIR}/lab02/p10.cpp")

add_executable(lab03-p01 "${PROJECT_SOURCE_DIR}/lab03/p01.cpp")
add_executable(lab03-p02 "${PROJECT_SOURCE_DIR}/lab03/p02.cpp")
add_executable(lab03-p03 "${PROJECT_SOURCE_DIR}/lab03/p03.cpp")
add_executable(lab03-p04 "${PROJECT_SOURCE_DIR}/lab03/p04.cpp")
add_executable(lab03-p05 "${PROJECT_SOURCE_DIR}/lab03/p05.cpp")
add_executable(lab03-p06 "${PROJECT_SOURCE_DIR}/lab03/p06.cpp")
add_executable(lab03-p07 "${PROJECT_SOURCE_DIR}/lab03/p07.cpp")
add_executable(lab03-p08 "${PROJECT_SOURCE_DIR}/lab03/p08.cpp")
add_executable(lab03-p09 "${PROJECT_SOURCE_DIR}/lab03/p09.cpp")
add_executable(lab03-p10 "${PROJECT_SOURCE_DIR}/lab03/p10.cpp")

add_executable(lab04-p01 "${PROJECT_SOURCE_DIR}/lab04/p01.cpp")
add_executable(lab04-p02 "${PROJECT_SOURCE_DIR}/lab04/p02.cpp")
add_executable(lab04-p03 "${PROJECT_SOURCE_DIR}/lab04/p03.cpp")
add_executable(lab04-p04 "${PROJECT_SOURCE_DIR}/lab04/p04.cpp")
add_executable(lab04-p05 "${PROJECT_SOURCE_DIR}/lab04/p05.cpp")
add_executable(lab04-p06 "${PROJECT_SOURCE_DIR}/lab04/p06.cpp")
add_executable(lab04-p07 "${PROJECT_SOURCE_DIR}/lab04/p07.cpp")
add_executable(lab04-p08 "${PROJECT_SOURCE_DIR}/lab04/p08.cpp")
add_executable(lab04-p09 "${PROJECT_SOURCE_DIR}/lab04/p09.cpp")
add_executable(lab04-p10 "${PROJECT_SOURCE_DIR}/lab04/p10.cpp")

add_executable(p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp")
add_executable(p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp")
add_executable(p1002 "${PROJECT_SOURCE_DIR}/ojmid/p1002.cpp")
add_executable(p1003 "${PROJECT_SOURCE_DIR}/ojmid/p1003.cpp")
add_executable(p1004 "${PROJECT_SOURCE_DIR}/ojmid/p1004.cpp")
add_executable(p1005 "${PROJECT_SOURCE_DIR}/ojmid/p1005.cpp")
add_executable(p1006 "${PROJECT_SOURCE_DIR}/ojmid/p1006.cpp")
add_executable(p1007 "${PROJECT_SOURCE_DIR}/ojmid/p1007.cpp")
add_executable(p1008 "${PROJECT_SOURCE_DIR}/ojmid/p1008.cpp")
add_executable(p1009 "${PROJECT_SOURCE_DIR}/ojmid/p1009.cpp")
add_executable(p1010 "${PROJECT_SOURCE_DIR}/ojmid/p1010.cpp")
add_executable(p1011 "${PROJECT_SOURCE_DIR}/ojmid/p1011.cpp")
add_executable(p1012 "${PROJECT_SOURCE_DIR}/ojmid/p1012.cpp")
add_executable(p1013 "${PROJECT_SOURCE_DIR}/ojmid/p1013.cpp")
add_executable(p1014 "${PROJECT_SOURCE_DIR}/ojmid/p1014.cpp")
add_executable(p1015 "${PROJECT_SOURCE_DIR}/ojmid/p1015.cpp")
add_executable(p1016 "${PROJECT_SOURCE_DIR}/ojmid/p1016.cpp")
add_executable(p1017 "${PROJECT_SOURCE_DIR}/ojmid/p1017.cpp")
add_executable(p1018 "${PROJECT_SOURCE_DIR}/ojmid/p1018.cpp")
add_executable(p1019 "${PROJECT_SOURCE_DIR}/ojmid/p1019.cpp")
add_executable(p1020 "${PROJECT_SOURCE_DIR}/ojmid/p1020.cpp")
add_executable(p1021 "${PROJECT_SOURCE_DIR}/ojmid/p1021.cpp")
add_executable(p1035 "${PROJECT_SOURCE_DIR}/ojmid/p1035.cpp")
add_executable(p1036 "${PROJECT_SOURCE_DIR}/ojmid/p1036.cpp")